# clean-room-web

./: .editorconfig  .gitattributes  .gitignore  README.md  cspell.json  flake.nix  rust-toolchain.toml
architecture/paper/: what-the-web-could-have-been.md
architecture/paper/site/: README.md  build.sh  index.html  index.md  package.sh  what-the-web-could-have-been.html
architecture/poc/: Cargo.toml  PLAN.md  README.md
architecture/poc/abi/: Cargo.toml
architecture/poc/abi/src/: lib.rs
architecture/poc/app-shell/: Cargo.toml
architecture/poc/app-shell/src/: lib.rs
architecture/poc/app-todo-core/src/: lib.rs
architecture/poc/bundles/app-todo-flex/.cargo/: config.toml
architecture/poc/bundles/doc-renderer/src/: lib.rs
architecture/poc/bundles/hello-rect/: Cargo.toml
architecture/poc/bundles/hello-rect/src/: lib.rs
architecture/poc/docs/: page-two.wcd
architecture/poc/host/: Cargo.toml
architecture/poc/host/src/: engine.rs  main.rs  raster.rs  text.rs
architecture/poc/layout-grid/: Cargo.toml
architecture/poc/layout-grid/src/: lib.rs
architecture/poc/ui/src/: host.rs  lib.rs
architecture/poc/wcd/src/: lib.rs
architecture/poc/xtask/src/: main.rs
architecture/standards/: code.md
paper/: what-the-web-could-have-been.md
poc/: README.md
poc/.cargo/: config.toml
poc/app-todo-core/: Cargo.toml
poc/bundles/app-todo-flex/: Cargo.toml
poc/bundles/app-todo-flex/src/: lib.rs
poc/bundles/app-todo-grid/: Cargo.toml
poc/bundles/app-todo-grid/src/: lib.rs
poc/bundles/doc-renderer/: Cargo.toml
poc/bundles/hello-rect/.cargo/: config.toml
poc/docs/: page-one.wcd
poc/host/: Cargo.toml
poc/host/assets/: README.md
poc/layout-flex/: Cargo.toml
poc/layout-flex/src/: lib.rs
poc/ui/: Cargo.toml
poc/ui/src/: host.rs
poc/wcd/: Cargo.toml
poc/xtask/: Cargo.toml
standards/: rust-best-practices.md  rust-comment-style.md
