[package]
name = "host"
version = "0.0.0"
edition = "2024"
description = "The oblivious engine: loads a WASM bundle, owns the window and pixel surface."

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
abi.workspace = true
wasmi = "0.40"
winit = "0.30"
softbuffer = "0.4"
fontdue = "0.9"
anyhow = "1"
