[package]
name = "layout-flex"
version = "0.0.0"
edition = "2024"
description = "A flexbox-style layout library (userland WASM). Stacks children along an axis."

# Standalone (compiled into wasm bundles, not the host workspace).
[workspace]

[lib]
crate-type = ["rlib"]

[dependencies]
ui = { path = "../ui" }
