[package]
name = "app-todo-flex"
version = "0.0.0"
edition = "2024"
description = "Todo app bundled with the flexbox-style layout library."

# Standalone crate, not part of the host workspace (different compile target).
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
app-shell = { path = "../../app-shell" }
layout-flex = { path = "../../layout-flex" }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true
