[package]
name = "hello-rect"
version = "0.0.0"
edition = "2024"
description = "M0 test bundle: draws a rectangle via the host ABI. Not a final PoC artifact."

# Standalone crate, not part of the host workspace (different compile target).
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
abi = { path = "../../abi" }
lol_alloc = "0.4"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true
